--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.24.0",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-hook-form": "^7.21.0",
     "react-native": "0.66.3",
@@ -23,6 +26,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-redux": "^7.2.6",
+    "realm": "^10.11.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
