--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-youtube": "^2.0.2",
     "react-redux": "^7.2.6",
     "realm": "^10.11.0",
     "styled-components": "^5.3.3"
