--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-hook-form": "^7.21.0",
     "react-native": "0.66.3",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-pager-view": "^5.4.9",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-youtube": "^2.0.2",
     "react-redux": "^7.2.6",
     "realm": "^10.11.0",
